# Burstcoin-OpenCL-plotter

./: .bumpversion.cfg  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  optimizer-main.cpp
hooks/: post-rewrite
optimizer/: CMakeLists.txt  optimizer-main.cpp
overlap_checker/: CMakeLists.txt  overlap-checker-main.cpp
plot_planner/: CMakeLists.txt  plot_planner_main.cpp
scripts/: update-version.sh
unit_tests/: CMakeLists.txt  nonce_num_range_tests.cpp  nonce_num_set_tests.cpp  plot_file_math_tests.cpp  plot_file_tests.cpp  utils_unit_tests.cpp
utils/: CMakeLists.txt  nonce_num_range.cpp  nonce_num_range.h  nonce_num_set.cpp  nonce_num_set.h  optimizer.h  overlap_checker.h  plot_file.cpp  plot_file.h  plot_file_math.cpp  plot_file_math.h  plot_file_params.h  plot_file_scanner.h  plot_planner.h  utils.cpp  utils.h  version.cpp  version.h
utils/plotters/: cryo_gpu_stub_plotter.h  plotter_interface.h
